--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>辣椒體育 Chili Bet</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper.css">
+
 </head>
 <body>
     <div class="web">
@@ -86,16 +89,18 @@
         </div>
 
         <div class="hero">
-            <img src="img/hero.png" alt="">
-            <div class="hero-controller">
-                <span>
-                    <i class="img-switcher is--showing"></i>
-                    <i class="img-switcher"></i>
-                    <i class="img-switcher"></i>
-                    <i class="img-switcher"></i>
-                    <i class="img-switcher"></i>
-                    <i class="img-switcher"></i>
-                </span>
+            <!-- swiper -->
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="img/hero-midautm1010.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/hero1010.png" alt="">
+                    </div>
+                </div>
+                <!-- swiper pagination -->
+                <div class="swiper-pagination"></div>
             </div>
         </div>
 
@@ -241,6 +246,24 @@
         </div>
     </div>
     
-    <script src="js/behavior.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+            renderBullet: function (index, className) {
+            return '<span class="' + className + '">' + '</span>';
+            },
+        },
+
+        loop: true,
+        autoplay: {
+            delay: 10000,
+        },
+        });
+    </script>
+
 </body>
 </html>
