--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="header">
             <div class="header__container">
-                <div class="wrapper">
+                <div class="header__item">
                     <div class="logo">
                         <img src="img/icon/chili_logo.svg" alt="">
                     </div>
@@ -45,7 +45,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="wrapper">
+                <div class="header__item">
                     <div class="account">
                         <a href="#" class="account-info">
                             <img src="img/icon/user.png" alt="">
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-    
+    <script src="./js/behavior.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script>
